--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
       <div class="row">
 
         <div class="column-3"><span class="one">&#x2655;</span>
-        <span class="oneHue">&#x2655;</span></div>
-        <div class="column-3"><span class="two">&#x2655;</span></div>
-        <div class="column-3"><span class="three">&#x2655;</span></div>
-        <div class="column-3"><span class="four">&#x2655;</span></div>
+        <span class="oneHue">&#x2655;</span><span class="oneHue2">&#x2655;</span></div>
+
+        <div class="column-3"><span class="two">&#x2655;</span><span class="twoHue">&#x2655;</span><span class="twoHue2">&#x2655;</span></div>
+
+        <div class="column-3"><span class="three">&#x2655;</span><span class="threeHue">&#x2655;</span><span class="threeHue2">&#x2655;</span></div>
+
+        <div class="column-3"><span class="four">&#x2655;</span><span class="fourHue">&#x2655;</span><span class="fourHue2">&#x2655;</span></div>
+
       </div>
 
     </section>
