add mixed colors using a mixin

--- a/index.html
+++ b/index.html
@@ -12,23 +12,33 @@
   <body>
     <section class="wrapper">
       <div class="row">
+        <!--Hues-->
+        <div class="column-3"><span class="one">Yale&#x2655;Blue</span>
+          <span class="oneHue">Hue 10%</span><span class="oneHue2">Hue 20%</span></div>
 
-        <div class="column-3"><span class="one">&#x2655;</span>
-        <span class="oneHue">&#x2655;</span><span class="oneHue2">&#x2655;</span></div>
+          <div class="column-3"><span class="two">Purple&#x2655;Navy</span><span class="twoHue">Hue 10%</span><span class="twoHue2">Hue 20%</span></div>
 
-        <div class="column-3"><span class="two">&#x2655;</span><span class="twoHue">&#x2655;</span><span class="twoHue2">&#x2655;</span></div>
+          <div class="column-3"><span class="three">Pastel&#x2655;Violet</span><span class="threeHue">Hue 10%</span><span class="threeHue2">Hue 20%</span></div>
 
-        <div class="column-3"><span class="three">&#x2655;</span><span class="threeHue">&#x2655;</span><span class="threeHue2">&#x2655;</span></div>
+          <div class="column-3"><span class="four">Thistle&#x2655;</span><span class="fourHue">Hue 10%</span><span class="fourHue2">Hue 20%</span></div>
+        </div>
+        <div class="row">
 
-        <div class="column-3"><span class="four">&#x2655;</span><span class="fourHue">&#x2655;</span><span class="fourHue2">&#x2655;</span></div>
+          <!--Mixed with other colors-->
+          <div class="column-3"><span class="oneMix">Yale Blue + Pastel Violet</span>
+            <span class="oneMix2">Yale Blue + Majorell Blue</span><span class="oneMix3">Yale Blue + Forest Green</span></div>
 
-      </div>
+            <div class="column-3"><span class="twoMix">Purple Navy + Pastel Violet</span><span class="twoMix2">Purple Navy + Majorell Blue</span><span class="twoMix3">Purple Navy + Forest Green</span></div>
 
-    </section>
+            <div class="column-3"><span class="threeMix">Pastel Violet + Majorell Blue</span><span class="threeMix2">Pastel Violet + Yale Blue</span><span class="threeMix3">Pastel Violet + Forest Green</span></div>
 
-  <!--Scripts-->
-  <script src="js/jquery-3.1.0.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/scripts.js"></script>
-  </body>
-</html>
+            <div class="column-3"><span class="fourMix">Thistle + Pastel Violet</span><span class="fourMix2">Thistle + Yale Blue</span><span class="fourMix3">Thistle + Forest Green</span></div>
+          </div>
+          </section>
+        </div>
+        <!--Scripts-->
+        <script src="js/jquery-3.1.0.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
+      </body>
+    </html>
