add typography with font variables

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 
             <div class="column-3"><span class="fourMix">Thistle + Pastel Violet</span><span class="fourMix2">Thistle + Yale Blue</span><span class="fourMix3">Thistle + Forest Green</span></div>
           </div>
+
+          <div class="heading">
+            <h1>Colors</h1>
+            <h2>Be kind to others..</h2>
+            <h3>Eat fruits and veggies</h3>
+            <h4>F.O.M.O.</h4>
+            <p>Megan Kaluza</p>
+          </div>
           </section>
         </div>
         <!--Scripts-->
